# libelas

./: CMakeLists.txt
cmake/: SIMD_TYPE.cmake
src/: Makefile  descriptor.h  elas.cpp  elas.h  filter.cpp  filter.h  main.cpp  matrix.h  timer.h
